Modified restaurant add return value
